data/all-infer-tutorial/command-injection2/infer-out/report.txt
#0
tutorial/command-injection2.c:13: error: Api Misuse
  CmdInjection.
  11.   char cmd[CMD_MAX] = "/usr/bin/cat ";
  12.   strcat(cmd, argv[1]);
  13.   system(cmd);
        ^
  14. }

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
      Api Misuse(API_MISUSE): 1
